# cairn

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  QUICKSTART.md  README-v4-review.md  README.md  SETUP_FOR_AGENTS.md  _atlas_render.py  eval_coldstart.py  eval_rotation.py  eval_scale.py  install.ps1  install.sh  pyproject.toml  test_deep.py  test_multi_agent.py
cairn/: __init__.py  __main__.py  accounts.py  audit.py  backfill.py  book.py  capture.py  codex_hook.py  codex_reader.py  compact_hook.py  compile.py  consolidate.py  dashboard.py  distill.py  edges.py  garden.py  hook.py  importer.py  index.py  inject.py  local_agent_reader.py  mcp_server.py  pending.py  prompt_hook.py  redact.py  registry.py  retrieve.py  schedule.py  stop_hook.py  turn_hook.py  vault.py
cairn/assets/brand/: manifest.webmanifest
cairn/backends/: __init__.py  embed.py
tests/: test_account_cli.py  test_account_cmd.py  test_account_stamp.py  test_atlas_stale.py  test_attribution_repair.py  test_audit.py  test_book_importer.py  test_cairn.py  test_codex_filter.py  test_codex_hook.py  test_codex_reader.py  test_codex_rewire.py  test_dashboard_projects.py  test_desktop_proof.py  test_garden_freshness.py  test_garden_handle.py  test_garden_icons.py  test_garden_p2.py  test_garden_p3.py  test_garden_projects.py  test_gist.py  test_issues_1_2.py  test_local_agent_reader.py  test_lossless_turns.py  test_mcp_attribution.py  test_mcp_read.py  test_orient_scope.py  test_provenance.py  test_read_full.py  test_redact_corpus.py  test_registry.py  test_runnability_fixes.py  test_setup.py  test_shim_refresh.py  test_tool_calls_as_turn_metadata.py  test_turn_hook_lossless.py
